k8s/account-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-api

spec:
  replicas: 1

  selector:
    matchLabels:
      app: account-api

  template:
    metadata:
      labels:
        app: account-api

    spec:
      containers:
        - name: account-api
          image: selvaacr2026.azurecr.io/account-api:latest

          ports:
            - containerPort: 80
