k8s/customer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-api

spec:
  replicas: 1

  selector:
    matchLabels:
      app: customer-api

  template:
    metadata:
      labels:
        app: customer-api

    spec:
      containers:
        - name: customer-api
          image: selvaacr2026.azurecr.io/customer-api:latest

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
