k8s/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: gateway

spec:
  replicas: 1

  selector:
    matchLabels:
      app: gateway

  template:
    metadata:
      labels:
        app: gateway

    spec:
      containers:
        - name: gateway
          image: selvaacr2026.azurecr.io/gateway:latest

          ports:
            - containerPort: 80
