k8s/transaction-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-api

spec:
  replicas: 1

  selector:
    matchLabels:
      app: transaction-api

  template:
    metadata:
      labels:
        app: transaction-api

    spec:
      containers:
        - name: transaction-api
          image: selvaacr2026.azurecr.io/transaction-api:latest

          ports:
            - containerPort: 80
