k8s/webui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-ui

spec:
  replicas: 1

  selector:
    matchLabels:
      app: web-ui

  template:
    metadata:
      labels:
        app: web-ui

    spec:
      containers:
        - name: web-ui
          image: selvaacr2026.azurecr.io/react-ui:latest

          ports:
            - containerPort: 80
