k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simplebank-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx   # ✅ THIS IS THE KEY FIX

  tls:
  - secretName: tls-secret

  rules:
  - http:
      paths:

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: gateway-service
            port:
              number: 80

      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-ui-service
            port:
              number: 80
